define TunerProcess
